Finished reviewing rest of sys id chapter

--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -476,7 +476,7 @@ volume = {474},
 year = {2018}
 }
 @incollection{Vergouw2016,
-abstract = {The different types of drones can be differentiated in terms of the type (fixed-wing, multirotor, etc.), the degree of autonomy, the size and weight, and the power source. These specifications are important, for example for the drone's cruising range, the maximum flight duration, and the loading capacity. Aside from the drone itself (i.e., the ‘platform') various types of payloads can be dis- tinguished, including freight (e.g., mail parcels, medicines, fire extinguishing material, flyers, etc.) and different types of sensors (e.g., cameras, sniffers, mete- orological sensors, etc.). Applications of different payloads will be described. In order to perform a flight, drones have a need for (a certain amount of) wireless communication with a pilot on the ground. In addition, in most cases there is a need for communication with a payload, like a camera or a sensor. To allow this communication to take place frequency spectrum is required. The requirements for frequency spectrum depend on the type of drone, the flight characteristics, and the payload. Since frequency spectrum does not end at national borders, international coordination on the use of frequency spectrum is required. Legal issues on fre- quency spectrum usage and electronic equipment (national and international legal matters on frequency spectrum and equipment requirements) are discussed, as well as frequency spectrum and vulnerability (an insight in available frequency spectrum and associated risks in using the frequency spectrum) and surveillance and compliance (enforcement of frequency spectrum use, equipment requirements, and the need for international and European cooperation). Finally, future devel- opments in drone technology are discussed. The trend is for drones to become smaller, lighter, more efficient, and cheaper. As a result, drones will become increasingly available to the public at large and will be used for an increasing range of purposes. Drones will become increasingly autonomous and also more capable of operating in swarms.},
+abstract = {The different types of drones can be differentiated in terms of the type (fixed-wing, multirotor, etc.), the degree of autonomy, the size and weight, and the power source. These specifications are important, for example for the drone's cruising range, the maximum flight duration, and the loading capacity. Aside from the drone itself (i.e., the ‘platform') various types of payloads can be dis- tinguished, including freight (e.g., mail parcels, medicines, fire extinguishing material, flyers, etc.) and different types of sensors (e.g., cameras, sniffers, mete- orological sensors, etc.). Applications of different payloads will be described. To perform a flight, drones have a need for (a certain amount of) wireless communication with a pilot on the ground. In addition, in most cases there is a need for communication with a payload, like a camera or a sensor. To allow this communication to take place frequency spectrum is required. The requirements for frequency spectrum depend on the type of drone, the flight characteristics, and the payload. Since frequency spectrum does not end at national borders, international coordination on the use of frequency spectrum is required. Legal issues on fre- quency spectrum usage and electronic equipment (national and international legal matters on frequency spectrum and equipment requirements) are discussed, as well as frequency spectrum and vulnerability (an insight in available frequency spectrum and associated risks in using the frequency spectrum) and surveillance and compliance (enforcement of frequency spectrum use, equipment requirements, and the need for international and European cooperation). Finally, future devel- opments in drone technology are discussed. The trend is for drones to become smaller, lighter, more efficient, and cheaper. As a result, drones will become increasingly available to the public at large and will be used for an increasing range of purposes. Drones will become increasingly autonomous and also more capable of operating in swarms.},
 author = {Vergouw, Bas and Nagel, Huub and Bondt, Geert and Custers, Bart},
 doi = {10.1007/978-94-6265-132-6_2},
 pages = {21--45},
