--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -611,7 +611,7 @@ Finally, practical flight data will be used to verify the simulated mathematical
     % \FloatBarrier\section{Dynamic payloads}
     
     %     In this work, a dynamic payload refers to a payload with dynamics that differ significantly from a rigid mass.
-    %     When considering suspended payloads, a dynamic payload induces dynamics which differ from that of a simple pendulum.
+    %     When considering suspended payloads, a dynamic payload induces dynamics which differ from that of a single pendulum.
     
     %     \begin{itemize}
     %         \item Most control in literature model payload as rigid Mass. Give references.
