--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -85,7 +85,7 @@
     \end{equation}
     Note that the primary objective of \gls{DMDc} is to determine the best fit model matrices, $\bm{A}_{dmd}$, $\bm{A}_d$ and $\bm{B}_d$, 
     given the data in $\bm{X^\prime}$, $\bm{X}$, $\bm{X}_d$, and $\bm{\Upsilon}$ \cite{Proctor2016c}.
-    In order to group the unknowns into a single matrix, Equation~\ref{eq:dmd_state_space} is manipulated into the form,
+    To group the unknowns into a single matrix, Equation~\ref{eq:dmd_state_space} is manipulated into the form,
     \begin{equation} \label{eq:G_Omega}
         \bm{X^\prime} =   
         \begin{bmatrix} 
