--- a/system_id/plant.tex
+++ b/system_id/plant.tex
@@ -35,7 +35,7 @@
     \end{equation}
     where $\theta$ and $\dot{\theta}$ are the payload angle and angular rate about the inertial East axis,
     and $V_N$ is the North velocity of the multirotor in the inertial frame. 
-    A schematic of this \gls{2D} plant is shown in Figure \ref{fig:floating_pend}, where $m_Q$ is the multirotor mass, $m_p$ is the payload mass, and $l$ is the cable length.
+    A schematic of this \gls{2D} plant is shown in Figure~\ref{fig:floating_pend}, where $m_Q$ is the multirotor mass, $m_p$ is the payload mass, and $l$ is the cable length.
 
     \begin{figure}[htb]
         \centering
