--- a/control/simulation_environment.tex
+++ b/control/simulation_environment.tex
@@ -2,11 +2,11 @@
 
     \paragraph
     The controllers in this chapter are tested within a Simulink\texttrademark~simulation environment.
-    This is used rather than the SITL and Gazebo simulation environment because it allows us to iterate designs faster.
+    This is used rather than the \gls{SITL} and Gazebo simulation environment because it allows us to iterate designs faster.
     Simulink\texttrademark~provides a graphical interface for control system design which enables us to change the control system design with ease.
-    In contrast, the SITL and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires \gls{ROS} nodes to interface an \gls{MPC} with PX4.
+    In contrast, the \gls{SITL} and Gazebo simulation environment requires text-based control laws with C\texttt{++} and requires \gls{ROS} nodes to interface an \gls{MPC} with PX4.
     This requires a lot more development time for control system design than the graphical tools in Simulink.
-    The SITL and Gazebo simulation also has a longer runtime per simulation, which further adds to the development time of the iterative control system design process.
+    The \gls{SITL} and Gazebo simulation also has a longer runtime per simulation, which further adds to the development time of the iterative control system design process.
     
     \paragraph
     The multirotor and suspended payload system is modelled in Simulink\texttrademark~with the differential equations derived in Chapter~\ref{chap:modelling}.
