--- a/exp_design/exp_design.tex
+++ b/exp_design/exp_design.tex
@@ -185,7 +185,7 @@
         \paragraph
         \gls{QGC} runs on the desktop computer and communicates with the Gazebo simulator with MAVlink messages over a local \gls{UDP} connection.
         The Gazebo simulator also runs on the desktop computer and simulates the Honeybee multirotor.
-        The simulator mimics the multirotor sensor values and sends them to PX4 with MAVlink messages over a USB connection. 
+        The simulator mimics the multirotor sensor values and sends them to PX4 with MAVlink messages over a \gls{USB} connection. 
         
         \paragraph
         The PX4 firmware runs on the \gls{FC} board.
