--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -104,20 +104,19 @@
         \bm{\Omega} = \bm{U} \bm{\Sigma} \bm{V}^T
     \).
     Often, only the first $p$ columns of $\bm{U}$ and $\bm{V}$ are required for a good approximation of the dynamics \cite{Brunton2017a}.
-    % Talk about Reduced Order Modelling??
-    % \gls{POD} modes??
     In many cases, the truncated form results in better models than the exact form when noisy measurements are used.
     This is because the effect of measurement noise is mostly captured by the truncated columns of $\bm{U}$ and $\bm{V}$.
     By truncating these columns, the influence of noise in the regression problem is reduced. 
-    % \murray{explain this better ??}
-    Hence the \gls{SVD} is used in the truncated form: 
+    This will be further explored in Section~\ref{sec:hyperparameters}.
+    
+    \paragraph
+    The \gls{SVD} is used in the truncated form: 
     \begin{equation} \label{eq:tilde_svd}
         \bm{\Omega} \approx \Tilde{\bm{U}} \Tilde{\bm{\Sigma}} \Tilde{\bm{V}}^T ,
     \end{equation}
     where $\phantom{.} \Tilde{ } \phantom{.}$ represents rank-$p$ truncation.
     For the $\bm{U}$ and $\bm{V}$ matrices, rank-$p$ truncation refers to keeping only the first $p$ number of columns and truncating the rest.
     Rank-$p$ truncation of the $\bm{S}$ matrix refers to keeping the first $p$ number of columns and rows and truncating the rest.
-    % \murray{maybe insert colour pictures showing matrices ??}        
 
     \paragraph
     By combining Equation~\ref{eq:tilde_svd} with the over-constrained equality in Equation~\ref{eq:G_Omega}, 
