--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -5,7 +5,7 @@
 \chapter{System identification}
 \label{chap:system_id}
 
-% ?? Do i explain SITL + Gazebo anywhere?
+% ?? Do i explain \gls{SITL} + Gazebo anywhere?
 % ?? And clear difference to MATLAB\textsuperscript{\textregistered} and Simulink??
 
     \paragraph
